--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>personSearch</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/search</url-pattern>
     </servlet-mapping>
 
 </web-app>
